# easy-local-features-baselines

./: .gitignore  .gitmodules  LICENSES.md  README.md  baseline_disk.py  baseline_r2d2.py  baseline_superglue.py  baseline_superpoint.py  deploy.sh  hubconf.py  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  test.py  test_custom_matchers.py
.github/workflows/: docs.yml
assets/v_vitro/: 1.ppm  2.ppm  3.ppm  4.ppm  5.ppm  6.ppm  H_1_4  H_1_5  H_1_6
docs/: changelog.md  gallery.md  getting-started.md  index.md  license.md
docs/api/: feature.md  matching.md  utils.md
docs/how-to/: add-a-new-extractor.md  run-benchmarks.md  run-on-gpu.md
docs/reference/: cli.md  extractors.md  matchers.md
docs/user-guide/: ensemble.md  features.md  io-ops.md  matching.md  visualization.md
easy_local_features/: __init__.py  baseline_dalf.py  baseline_deal.py  baseline_disk.py  baseline_r2d2.py  baseline_superglue.py  baseline_superpoint.py  io.py
easy_local_features/datasets/: augmentor.py  download.py
easy_local_features/depth/: baseline_depthanythingv2.py
easy_local_features/eval/: pose_eval.py
easy_local_features/eval/semantic/: spair.py
easy_local_features/feature/: baseline_alike.py  baseline_aliked.py  baseline_croco.py  baseline_d2net.py  baseline_dad.py  baseline_dalf.py  baseline_deal.py  baseline_dedode.py  baseline_delf.py  baseline_dinov2.py  baseline_disk.py  baseline_logpolar.py  baseline_orb.py  baseline_r2d2.py  baseline_relf.py  baseline_resnet.py  baseline_roma.py  baseline_sfd2.py  baseline_sosnet.py  baseline_superpoint.py  baseline_superpoint_open.py  baseline_tfeat.py  baseline_vgg.py  baseline_xfeat.py  basemodel.py
easy_local_features/features/: baseline_dalf.py  baseline_superpoint.py
easy_local_features/matching/: baseline_lightglue.py  baseline_loftr.py  baseline_superglue.py  nearest_neighbor.py
easy_local_features/submodules/git_alike/: alike.py  alnet.py  soft_detect.py
easy_local_features/submodules/git_brand/: brand.py  desc_brand.cpp
easy_local_features/submodules/git_croco/: masking.py
easy_local_features/submodules/git_d2net/: models.py
easy_local_features/submodules/git_dad/dad/: pyproject.toml
easy_local_features/submodules/git_dad/dad/dad/: __init__.py  augs.py  checkpoint.py  train.py
easy_local_features/submodules/git_dad/dad/dad/benchmarks/: hpatches.py  megadepth.py
easy_local_features/submodules/git_dad/dad/dad/datasets/: megadepth.py
easy_local_features/submodules/git_dad/dad/dad/detectors/: __init__.py
easy_local_features/submodules/git_dad/dad/dad/matchers/: __init__.py
easy_local_features/submodules/git_dad/dad/dad/reward_functions/: constant_reward.py
easy_local_features/submodules/git_dad/dad/experiments/: benchmark.py  qualitative.py
easy_local_features/submodules/git_dad/dad/experiments/repro_paper_results/: distill_max.py  repro_sota_table_slurm.py
easy_local_features/submodules/git_depthanythingv2/: dpt.py
easy_local_features/submodules/git_r2d2/: extract.py
easy_local_features/submodules/git_relf/: model.py
easy_local_features/submodules/git_sfd2/: sfd2.py  utils.py
easy_local_features/utils/: download.py  generic_match.py  io.py  ops.py  pathutils.py  vis.py
licenses/: LICENSE_DAD.txt  LICENSE_DINOv3.txt  LICENSE_ROMAV2.txt
scripts/: generate_doc_images.py
src/easy_local_features/: __init__.py
src/easy_local_features/eval/: pose_table.py
src/easy_local_features/feature/: __init__.py  baseline_alike.py  baseline_aliked.py  baseline_croco.py  baseline_d2net.py  baseline_dad.py  baseline_dalf.py  baseline_deal.py  baseline_dedode.py  baseline_delf.py  baseline_desc_reasoning.py  baseline_dinov2.py  baseline_dinov3.py  baseline_disk.py  baseline_mum.py  baseline_orb.py  baseline_r2d2.py  baseline_rekd.py  baseline_relf.py  baseline_resnet.py  baseline_roma.py  baseline_romav2.py  baseline_sfd2.py  baseline_sosnet.py  baseline_superpoint.py  baseline_superpoint_open.py  baseline_tfeat.py  baseline_topicfm.py  baseline_vgg.py  baseline_xfeat.py  (+3 more)
src/easy_local_features/submodules/git_brand/: CMakeLists.txt  brand_match_demo.cpp  desc_brand.cpp  run_and_save.py
src/easy_local_features/submodules/git_topicfm/: pyproject.toml
src/easy_local_features/submodules/git_topicfm/src/utils/: misc.py
src/test/: conftest.py
test/: test_features.py  test_matchers.py
test/feature/: test_aliked.py  test_dalf.py  test_deal.py  test_disk.py  test_r2d2.py  test_superpoint.py
test/matching/: test_loftr.py
tests/: conftest.py  test_compute_methods.py  test_dalf.py  test_deal.py  test_desc_reasoning.py  test_disk.py  test_ensemble_detector.py  test_features.py  test_matchers.py  test_r2d2.py  test_superglue.py  test_superpoint.py
(+89 files in other folders)
